# ai-coffee-machine-os

./: .gitignore  Dockerfile  LICENSE  README.md  all.bundle  devcontainer.json  pyproject.toml  pytest_full_output.txt  run_tests.py
.github/workflows/: ci.yml  plugin-tests.yml
docker/: docker-compose.yml
docs/: ARCHITECTURE.md
docs/plans/: hal-plugin-loader.md  sbc-deployment-plan.md
scripts/: fix_tests.py  install_dev_env.sh  run_with_mocks.sh
src/rmer_ai_coffee/: config.py
src/rmer_ai_coffee/connectivity/: rest_api.py
src/rmer_ai_coffee/core/: app.py  bootstrap.py
src/rmer_ai_coffee/hal/: base.py  mock.py  plugin_loader.py  registry.py
src/rmer_ai_coffee/hal/plugins/: example_plugin.py
src/rmer_ai_coffee/services/: brew_controller.py
tests/: test_hal_mock.py  test_hal_plugin_loader_impl.py  test_hal_plugin_loader_lifecycle.py  test_hal_registry.py  test_hal_registry_helper.py  test_plugin_loader_registry_integration.py
