[tool.poetry]
name = "ai-coffee-machine-os"
version = "0.0.1"
description = "AI-powered coffee machine OS skeleton"
authors = ["r-mercer <rmercer-dev@example.com>"]
packages = [
  { include = "rmer_ai_coffee", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pytest = "^8.0.0"
httpx = "^0.24.0"
pydantic = "^1.10.9"
asyncio-extras = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.14.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
